...
              HomeButtonNavigation(
                key: ValueKey("RANDOM IMAGE BY BREED"),
                buttonText: "RANDOM IMAGE BY BREED",
                navigator: RandomImageByBreed(),
              ),
              HomeButtonNavigation(
                buttonText: "Images List by Breed",
                navigator: ImageListByBreedView(),
              ),
              HomeButtonNavigation(
                buttonText: "Random Image by Breed & Sub-Breed",
                navigator: RandomImageBreedSubreed(),
              ),
              HomeButtonNavigation(
                buttonText: "Images List by Breed & Sub-Breed",
                navigator: ImagesListByBreedAndSubBreed(),
              ),
...
